make jlink task work for linux